--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
     "@fontsource/inter": "^5.2.8",
-    "antd": "^6.1.1"
+    "antd": "^6.1.1",
+    "axios": "^1.13.2"
   }
 }
