--- a/apps/adminPanel/package.json
+++ b/apps/adminPanel/package.json
@@ -18,12 +18,10 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.2",
-        "react-router-dom": "^7.1.1",
+        "react-router-dom": "7.7.1",
         "zustand": "^5.0.2"
     },
     "devDependencies": {
-        "@types/react": "^18.3.18",
-        "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
         "typescript": "^5.7.2",
         "vite": "^6.0.5"
