--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.25",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^4.0.0",
@@ -31,6 +31,8 @@
     "antd": "^6.1.1",
     "axios": "^1.13.2",
     "moment": "^2.30.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   }
